Update AppConfig.java